DontExpiReBack/src/main/java/org/example/error/UserNotFoundException.java
package org.example.error;

public class UserNotFoundException extends RuntimeException {
    public UserNotFoundException(String message) {
        super(message);
    }
}
